manifest/6-app-service-clusterIP.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: perx
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
  selector:
    app: perx
